@@ -1,3 +1,6 @@
+Changelog 1.6.16:
+Fix response.status_code check for Trakt Auth
+
 Changelog 1.6.15:
 Adjsut status code responses for Trakt module
 
